Added followers, following, Repos roast

--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
     </div>
     <h3 id="resultTitle" class="text-center" style="visibility: hidden;">Your Judgement</h3>
     <p id="result" class="text-dark" style="color: var(--dark);padding: 16px;"></p>
+    <p id="result1" class="text-dark" style="color: var(--dark);padding: 16px;"></p>
+    <p id="result2" class="text-dark" style="color: var(--dark);padding: 16px;"></p>
+    <p id="result3" class="text-dark" style="color: var(--dark);padding: 16px;"></p>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="index.js"></script>
 </body>
 
