--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="form-group"><input id="handleInput" class="form-control" type="text" placeholder="GitHub Handle"
                     style="border-radius: 12px;"></div>
             <div class="form-group"><button class="btn btn-primary btn-block text-white bg-dark"
-                    onclick="return onSubmit()" style="border-radius: 12px;">Give Judgement</button></div>
+                    onclick="return onSubmit(event)" style="border-radius: 12px;">Give Judgement</button></div>
         </form>
     </div>
     <h3 id="resultTitle" class="text-center" style="visibility: hidden;">Your Judgement</h3>
