Added methods to output Repo Info

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <p id="result1" class="text-dark" style="color: var(--dark);padding: 16px;"></p>
     <p id="result2" class="text-dark" style="color: var(--dark);padding: 16px;"></p>
     <p id="result3" class="text-dark" style="color: var(--dark);padding: 16px;"></p>
+    <p id="result4" class="text-dark" style="color: var(--dark);padding: 16px;"></p>
+    <p id="result5" class="text-dark" style="color: var(--dark);padding: 16px;"></p>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
